[package]
name = "recon"
version = "0.1.0"
edition.workspace = true

[dependencies]
exchanges = { path = "../../crates/exchanges" }

# Runtime async
tokio = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Sérialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Client HTTP (résolution des market_id Lighter)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Horodatage des fichiers de sortie
chrono = "0.4"
